# NewsIQ

./: .env.example  .gitignore  .gitlab-ci.yml  .gitleaksignore  Backend Schema Document.md  Caddyfile  PR_SUMMARY.md  Product Requirements Document.md  README.md  Step-by-Step Implementation Plan.md  Technical Requirements Document.md  UX Design Brief.md  UX Flow Document.md  data_pipeline_flowcharts.md  docker-compose.yml  implementation-report.md  implementation_plan.md  index.html  landing.html  newsiq_system_architecture.md  pipeline_audit_report.md  profile.html  profile_settings_append.css  profile_settings_styles.css  profile_styles_dump.css
apps/api/: .dockerignore  Dockerfile  alembic.ini  alert.rules  benchmark_baseline.json  benchmark_baseline.py  evaluation_report.json  pipeline_benchmark_report.md  pipeline_replay.py  pipeline_replay_history.json  prometheus.yml  pyproject.toml  run_clustering.py  scratch_reset_mock_pipeline.py
apps/api/alembic/: env.py
apps/api/app/: __init__.py  main.py
apps/api/tests/: conftest.py  test_admin.py  test_agents.py  test_ai_observability.py  test_analysis_engines.py  test_api_integration.py  test_auth_refactor.py  test_backend_split.py  test_bedrock_provider.py  test_bookmarks.py  test_canonical_ids.py  test_clustering.py  test_consent.py  test_context_extractor.py  test_cost_budget.py  test_crawler.py  test_deduplication.py  test_discovery_queue.py  test_email_verification.py  test_embedding_cache.py  test_entity_linker.py  test_entity_linker_resiliency.py  test_entity_timeline.py  test_event_service.py  test_event_validation.py  test_extraction_concurrency.py  test_extraction_manager.py  test_failures.py  test_feedback_agent.py  test_golden_eval.py  test_incremental_update.py  test_infra_pooling.py  test_ingestion.py  test_knowledge_graph.py  test_llm_gateway.py  test_metrics.py  test_model_router.py  (+16 more)
(+589 files in other folders)
