[project]
name = "newsiq-api"
version = "0.1.0"
description = "NewsIQ — AI News Intelligence Platform Backend"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Validation & Settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "argon2-cffi>=23.1.0",
    "authlib>=1.4.0",
    "httpx>=0.28.0",

    # Cache
    "redis>=5.2.0",

    # Task Queue
    "celery[redis]>=5.4.0",

    # AI / ML
    "openai>=1.60.0",
    "google-genai>=2.8.0",
    "sentence-transformers>=3.4.0",
    "scikit-learn>=1.6.0",
    "tenacity>=9.0.0",
    "hdbscan>=0.8.40",
    "spacy>=3.8.0",

    # Vector DB
    "qdrant-client>=1.13.0",

    # Search
    "meilisearch-python-sdk>=3.4.0",

    # RSS / Ingestion
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "newspaper4k>=0.9.3",
    "trafilatura>=1.12.0",
    "readability-lxml>=0.8.1",
    "lxml_html_clean>=0.1.1",
    "python-multipart>=0.0.18",
    "python-dotenv>=1.0.0",
    "uuid7>=0.1.0",
    "email-validator>=2.2.0",
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N806"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
# Only include the 'app' package — avoids the flat-layout ambiguity with 'alembic/'
include = ["app*"]
